--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,4 +4,16 @@ compatibility_date = "2024-04-01"
 compatibility_flags = ["nodejs_compat"]
 
 [observability]
+[observability.logs]
 enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = true
+head_sampling_rate = 1
+persist = true
+
+[env.test]
+name = "nexus-poc-test"
